--- a/Phase3/frontend/package.json
+++ b/Phase3/frontend/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "5.15.20",
-    "@mui/material": "5.15.20",
+    "@mui/base": "5.15.20",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "14.3.1",
